--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id "java"
-    id "io.spring.dependency-management" version "1.0.6.RELEASE"
-    id "org.springframework.boot" version "2.1.1.RELEASE"
+    id "io.spring.dependency-management" version "1.0.7.RELEASE"
+    id "org.springframework.boot" version "2.2.0.BUILD-SNAPSHOT"
 }
 
 repositories {
@@ -13,7 +13,7 @@ repositories {
 dependencies {
     implementation (
             "org.springframework.boot:spring-boot-starter-webflux",
-            "org.springframework.fu:spring-fu-jafu:0.0.4.BUILD-SNAPSHOT"
+            "org.springframework.fu:spring-fu-jafu:0.0.6.BUILD-SNAPSHOT",
     )
 }
 
