--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id "java"
     id "io.spring.dependency-management" version "1.0.7.RELEASE"
-    id "org.springframework.boot" version "2.2.0.BUILD-SNAPSHOT"
+    id "org.springframework.boot" version "2.2.0.M2"
 }
 
 repositories {
@@ -14,6 +14,8 @@ dependencies {
     implementation (
             "org.springframework.boot:spring-boot-starter-webflux",
             "org.springframework.fu:spring-fu-jafu:0.0.6.BUILD-SNAPSHOT",
+            "io.r2dbc:r2dbc-postgresql:1.0.0.M7",
+            "org.springframework.data:spring-data-r2dbc:1.0.0.M1"
     )
 }
 
