--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id "java"
-    id "io.spring.dependency-management" version "1.0.7.RELEASE"
-    id "org.springframework.boot" version "2.2.0.M3"
+    id "io.spring.dependency-management" version "1.0.8.RELEASE"
+    id "org.springframework.boot" version "2.2.2.RELEASE"
 }
 
 repositories {
@@ -14,12 +14,12 @@ dependencies {
     implementation (
             "org.springframework.boot:spring-boot-starter-webflux",
             "org.springframework.fu:spring-fu-jafu:0.0.6.BUILD-SNAPSHOT",
-            "io.r2dbc:r2dbc-postgresql:0.8.0.M8",
-            "org.springframework.data:spring-data-r2dbc:1.0.0.M2"
+            "io.r2dbc:r2dbc-postgresql:0.8.0.RELEASE",
+            "org.springframework.data:spring-data-r2dbc:1.0.0.RELEASE"
     )
 }
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_11
-    targetCompatibility = JavaVersion.VERSION_11
+    sourceCompatibility = JavaVersion.VERSION_13
+    targetCompatibility = JavaVersion.VERSION_13
 }
